<resources>
    <string name="app_name">CampusRider</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Dashboard</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="order_history">Order History</string>
    <string name="sells_report">Sells Report</string>
    <string name="grocery_summery">Grocery Summery</string>
    <string name="completed_food_order">Completed Food Order</string>
    <string name="completed_grocery_order">Completed Grocery Order</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="yyyy_mm_dd">yyyy_mm_dd</string>
    <string name="help_center">Help Center</string>
</resources>