<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.campusrider.ui.Dashboard.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_food_order"
        android:name="com.example.campusrider.ui.Food_Order_History.FoodOrderFragment"
        android:label="@string/completed_food_order"
        tools:layout="@layout/fragment_food_order" />

    <fragment
        android:id="@+id/nav_grocery_order"
        android:name="com.example.campusrider.ui.Grocery_Order_History.GroceryOrderFragment"
        android:label="@string/completed_grocery_order"
        tools:layout="@layout/fragment_grocery_order" />
    <fragment
        android:id="@+id/nav_grocery_summery"
        android:name="com.example.campusrider.ui.Grocery_Summary.GrocerySummaryFragment"
        android:label="@string/grocery_summery"
        tools:layout="@layout/fragment_grocery_summary" />
    <fragment
        android:id="@+id/nav_help"
        android:name="com.example.campusrider.ui.help.HelpFragment"
        android:label="@string/help_center"
        tools:layout="@layout/fragment_help" />
</navigation>